tests/neg-custom-args/captures/leaking-iterators.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/leaking-iterators.scala:56:16 ----------------------------
56 |  usingLogFile: log => // error
   |                ^
   |                Found:    (log: java.io.FileOutputStream^) ->? box cctest.Iterator[Int]^{log}
   |                Required: (log: java.io.FileOutputStream^) ->{fresh} box cctest.Iterator[Int]^?
   |
   |                Note that reference log.type
   |                cannot be included in outer capture set ?
57 |    xs.iterator.map: x =>
58 |      log.write(x)
59 |      x * x
   |
   | longer explanation available when compiling with `-explain`
